# Control_raspberrypi

./: .gitignore  Dockerfile  MANUAL_DE_USUARIO.md  README_SETUP.md  docker-compose.yml  launcher.py  launcher_gui.py  load.js  pi_admin_gui.db  pyproject.toml  requirements.txt
data/: devices.yaml
docs/: LAUNCHER.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
raspi_deployer_starter/: .gitignore  Nuevas mejoras para el proyecto.txt  README.md  requirements.txt
raspi_deployer_starter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
raspi_deployer_starter/app/: __init__.py  ai_analyzer.py  auth.py  backup_api.py  config_whitelist.py  deploy_api.py  deps.py  devices_api.py  docker_api.py  exec_local.py  healthcheck.py  logs_ws.py  main.py  metrics.py  portainer_api.py  rate_limit.py  registry.py  registry_api.py  schemas.py  services.py  ssh_manager.py  ssh_ws.py  system_ops.py
raspi_deployer_starter/config/: settings.example.env  whitelist.yaml
raspi_deployer_starter/data/: devices.yaml
raspi_deployer_starter/deploy/: backup.sh  deploy.py  install_pi.sh  pi-backup.service  pi-backup.timer  pi-watchdog.service  pi-watchdog.timer  pi_ssh.py  rpi.service  rpi.service.j2
raspi_deployer_starter/docs/: ROADMAP_RASPBERRY_PI_IMPROVEMENTS.md  RUNBOOK.md
raspi_deployer_starter/examples/: __init__.py
raspi_deployer_starter/nginx/: site-pi-admin.conf
scripts/: deploy_frontend_to_nginx.sh  install_backend_service.sh  update_repo.sh
(+29 files in other folders)
